# c-json-parser

./: .gitignore  README.md  install.sh  json.c  json.h  jsonLexer.c  jsonLexer.h  jsonListener.c  jsonListener.h  jsonParser.c  jsonParser.h  lexer.c  main.c  makefile  meson.build  meson_options.txt  run.sh  token.c  token.h
include/: debug.h  json.h  json.hh  jsonEditor.h  jsonLexer.h  jsonListener.h  jsonParser.h  token.h
src/: arr_dynamic_array.c  debug.c  json.c  jsonEditor.c  jsonLexer.c  jsonListener.c  jsonParser.c  obj_array.c  obj_hash_linear_probing.c  token.c
src/arr/: append.c  create.c  delete.c  get.c  set.c
test/: env.hh  test_array.cc  test_common.cc  test_lexer.cc  test_main.cc  test_object.cc  test_parser.cc  test_util.cc
testcases/: case1.json  case2.json
